--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 10vmin;
-  align-self: flex-start;
-  pointer-events: none;
+body {
+  background-color: #213555;
+  font-family: "Encode Sans Semi Condensed", sans-serif;
+  color: #F0F0F0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container {
+  padding: 48px 64px 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
+/*Main Layouts*/
+
+.header {
+  background-color: #4F709C;
+  padding-left: 0; /* Add this line to reset padding */
+  padding-right: 0;
+  margin-bottom: 40px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: space-between; /* Make items in it to have spreaded spaces between */
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+/*Elements*/
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo img {
+  width: 68px;
 }
