--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #5ca397;
+  background-color: #57a788;
   font-family: "Encode Sans Semi Condensed", sans-serif;
   color: #F0F0F0;
 }
@@ -13,7 +13,7 @@ body {
 /*Main Layouts*/
 
 .header {
-  background-color: #E5D283;
+  background-color: #ddd561;
   padding-left: 0; /* Add this line to reset padding */
   padding-right: 0;
   margin-bottom: 40px;
