Added habit records in supabase, linked with front end, and added week dates

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ body {
 
 .h-dist-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   padding: 10px 0px 10px 0px;
 }
